<resources>
    <string name="app_name">MediaPlayer</string>

    <!-- PrivacyPolicyFragment -->
    <string name="privacy_policy_text">PrivacyPolicyr　例文</string>

    <!-- TermsOfUseFragment -->
    <string name="terms_of_use_text">Terms of use 例文</string>

    <!-- LoginFirstActivity -->
    <string name="login_first_intro_text">\n配布されたID・初期パスワードを\n入力してください</string>
    <string name="login_first_id_hint">ID</string>
    <string name="login_first_password_hint">パスワード</string>
    <string name="find_first_password_text"><u>パスワードを忘れた方はこちら</u></string>
    <string name="login_first_button_text">LOGIN</string>

    <string name="login_page_top_text"><p>LOG IN</p></string>
    <string name="login_intro_text"><p>ログイン</p></string>
    <string name="login_id_hint">ID</string>
    <string name="login_password_hint">パスワード</string>
    <string name="find_password_text"><u>パスワードを忘れた方はこちら</u></string>
    <string name="login_button_text">LOGIN</string>

    <!-- IntroActivity -->
    <string name="intro_activity_button_arrow_text">→</string>
    <string name="intro_activity_button_text">Get Started!</string>
    <string name="app_intro_layout_text_1">(1)アプリ紹介画面のレイアウト</string>
    <string name="app_intro_layout_text_2">(2)アプリ紹介画面のレイアウト</string>
    <string name="app_intro_layout_text_3">(3)アプリ紹介画面のレイアウト</string>
    <string name="app_intro_layout_text_4">(4)アプリ紹介画面のレイアウト</string>

    <!-- Privacy Policy and Terms of use Fragment-->
    <string name="my_page_terms_of_use"><p>利用規約</p></string>
    <string name="my_page_privacy_policy">プライバシー・ポリシー</string>
    <string name="app_intro_screen">APP INTRO SCREEN</string>

    <!--Navigation menu tab タイトル-->
    <string name="title_tab_music">MUSIC</string>
    <string name="title_tab_video">VIDEO</string>
    <string name="title_tab_download">DOWNLOAD</string>
    <string name="title_tab_my_page">MYPAGE</string>
    <string name="main_screen">Main screen</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="music_fragment_page">Music Fragment Page</string>
    <string name="video_fragment_page">Video Fragment Page</string>
    <string name="mypage_fragment_page">MyPage Fragment Page</string>
    <string name="download_fragment_page">Download Fragment Page</string>

</resources>
