<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/navigation_music"
            android:icon="@mipmap/music_navi_icon"
            android:title="@string/title_tab_music"/>
    <item
            android:id="@+id/navigation_movie"
            android:icon="@mipmap/video_navi_icon"
            android:title="@string/title_tab_video"/>
    <item
            android:id="@+id/navigation_download"
            android:icon="@mipmap/download_navi_icon"
            android:title="@string/title_tab_download"/>
    <item
            android:id="@+id/navigation_mypage"
            android:icon="@mipmap/mypage_navi_icon"
            android:title="@string/title_tab_my_page"
    />
</menu>
