<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <ImageView android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:scaleType="centerCrop"/>

    <TextView
            android:layout_width="56dp"
            android:layout_height="16dp"
            android:layout_gravity="center"
            android:text="@string/login_page_top_text"
            android:textSize="14dp"
            android:textColor="@color/textColor"
            android:textAlignment="center"
            android:id="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="52dp"
            android:layout_marginLeft="160dp"
            android:layout_marginRight="159dp" app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"/>

    <TextView android:layout_width="263dp"
              android:layout_height="27dp"
              android:layout_gravity="center"
              android:text="@string/login_intro_text"
              android:id="@+id/textView"
              android:textColor="@color/textColor"
              android:textSize="16dp"
              android:textAlignment="center"
              android:gravity="center"
              android:layout_marginLeft="159dp"
              android:layout_marginRight="158dp"
              android:layout_marginTop="193dp"
              android:layout_marginBottom="544dp"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>


    <EditText
            android:id="@+id/login_id"
            android:layout_width="279dp"
            android:layout_height="48dp"
            android:inputType="text"
            android:textSize="12dp"
            android:paddingLeft="20dp"
            android:paddingBottom="16dp"
            android:paddingTop="17dp"
            android:textColorHint="@color/textColor_black"
            android:textColor="@color/textColor_black"
            android:background="@android:color/white"
            android:hint="@string/login_id_hint"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginBottom="430dp"
            android:layout_marginTop="334dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <EditText
            android:id="@+id/login_password"
            android:inputType="textPassword"
            android:layout_width="279dp"
            android:layout_height="48dp"
            android:textSize="12dp"
            android:paddingLeft="20dp"
            android:paddingBottom="16dp"
            android:paddingTop="17dp"
            android:textColor="@color/textColor_black"
            android:textColorHint="@color/textColor_black"
            android:background="@android:color/white"
            android:hint="@string/login_password_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginBottom="366dp"
            android:layout_marginTop="398dp"
            app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintBottom_toBottomOf="@+id/login_password"
            app:layout_constraintTop_toTopOf="@+id/find_password">

        <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleX="1.4"
                android:scaleY="1.4"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:padding="30dp"/>

        <TextView
                android:id="@+id/checkbox_instruction"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lineSpacingExtra="7dp"
                android:paddingLeft="15dp"
                android:paddingRight="30dp"
                android:textSize="12sp"/>

    </LinearLayout>

    <TextView
            android:id="@+id/find_password"
            android:layout_width="168dp"
            android:layout_height="15dp"
            android:textSize="12dp"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:text="@string/find_password_text"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="104dp"
            android:layout_marginRight="103dp"
            android:layout_marginBottom="287dp"
            android:layout_marginTop="510dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_horizontal" />

    <Button
            android:id="@+id/login_button"
            android:layout_width="327dp"
            android:layout_height="48dp"
            android:text="@string/login_button_text"
            android:textColor="@color/textColor"
            android:background="@drawable/login_button_design"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            app:layout_constraintHorizontal_bias="0.447"
            android:layout_marginBottom="31dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/find_password"
            app:layout_constraintVertical_bias="1.0"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
            android:id="@+id/first_login_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"/>

</androidx.constraintlayout.widget.ConstraintLayout>